--- a/styles.css
+++ b/styles.css
@@ -215,7 +215,25 @@ main {
 }
 
 @media (max-width: 800px) {
+    .nav-title {
+        display: none;
+    }
+
+    .card {
+        flex-basis: 40%;
+    }
+
     .sidebar-container {
         display: none;
+    }
+}
+
+@media (max-width: 500px) {
+    .nav-item.nav-search {
+        display: none;
+    }
+
+    .navbar {
+        justify-content: center;
     }
 }
