change padding of main

--- a/styles.css
+++ b/styles.css
@@ -215,6 +215,10 @@ main {
 }
 
 @media (max-width: 800px) {
+    main {
+        padding-left: 0;
+    }
+
     .nav-title {
         display: none;
     }
