--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,36 @@ main {
     padding-top: 6rem;
 }
 
+.tabs {
+    display: flex;
+    position: fixed;
+    right: 0;
+    align-items: center;
+    margin-top: 5rem;
+    padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
+    background-color: var(--pri-color);
+    width: calc(100vw - 8rem);
+    box-shadow: 0 4px 10px rgb(82 81 86);
+}
+
+.buttons {
+    padding-left: 2rem;
+}
+
+.tabs button {
+    font-size: 0.9rem;
+    margin-left: 1rem;
+    padding: 0.4rem 0.6rem;
+    background-color: var(--white);
+}
+
+.tabs button:last-child {
+    font-size: 0.9rem;
+    background-color: transparent;
+    color: var(--white);
+}
+
 /* CARD STYLES */
 .card {
     max-width: 12rem;
@@ -217,6 +247,10 @@ main {
 @media (max-width: 800px) {
     main {
         padding-left: 0;
+    }
+
+    .tabs {
+        width: 100%;
     }
 
     .nav-title {
